feat: Implement Firebase integration and backend services
This commit introduces significant changes to integrate Firebase for authentication and data storage, and establishes backend services for payment processing and secure operations.

Key updates include:
- **Frontend:**
    - Added Firebase and related dependencies to `package.json`.
    - Configured ESM imports for various Firebase modules and local project files.
    - Integrated Razorpay for payment gateway.
    - Implemented Firebase Cloud Messaging (FCM) for push notifications, including requesting permissions and token generation.
    - Added `process.env.GOOGLE_CLIENT_ID` to `AuthModal` for Google authentication.
- **Backend:**
    - Migrated backend to use `firebase-admin` for Firestore database access.
    - Replaced PostgreSQL database logic with Firestore operations for user management and data persistence.
    - Implemented JWT-based authentication and authorization.
    - Integrated Bcrypt for password hashing.
    - Set up Razorpay payment processing.
    - Added Google authentication verification.
    - Included CORS middleware for cross-origin requests.
    - Configured `dotenv` for environment variables.
    - Added telemetry for Firebase with `@genkit-ai/firebase`.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,32 @@
   "dependencies": {
     "react-dom": "^19.2.3",
     "react": "^19.2.3",
-    "@google/genai": "^1.35.0"
+    "@google/genai": "^1.35.0",
+    "firebase": "^12.7.0",
+    "./App": "latest",
+    "./types": "latest",
+    "./constants": "latest",
+    "./components/TryOnInterface": "latest",
+    "./components/Pricing": "latest",
+    "./components/Wardrobe": "latest",
+    "./components/Recommendations": "latest",
+    "./components/AuthModal": "latest",
+    "./components/ProductModal": "latest",
+    "./components/Loader": "latest",
+    "./services/api": "latest",
+    "./services/firebase": "latest",
+    "./services/geminiService": "latest",
+    "./services/dbService": "latest",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "bcryptjs": "^3.0.3",
+    "express": "^5.2.1",
+    "dotenv": "^17.2.3",
+    "jsonwebtoken": "^9.0.3",
+    "firebase-admin": "^13.6.0",
+    "google-auth-library": "^10.5.0",
+    "razorpay": "^2.9.6",
+    "@genkit-ai/firebase": "^1.27.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
