--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,21 @@
+
 {
   "name": "mirrorx-backend",
-  "version": "1.2.0",
-  "description": "Backend service for MirrorX using Firebase Admin & Resilience",
+  "version": "1.0.0",
+  "description": "Backend service for MirrorX Atelier",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "setup:iam": "chmod +x init_iam.sh && ./init_iam.sh"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "@genkit-ai/core": "^0.5.0",
-    "@genkit-ai/firebase": "^0.5.0",
-    "firebase-admin": "^11.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.0.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
     "razorpay": "^2.9.2"
   },
   "engines": {
